try resolve overlap issue

--- a/style.css
+++ b/style.css
@@ -59,16 +59,24 @@ p {
   height: fit-content;
 }
 
+#page1 .deco-gif-1,
+#page1 .deco-gif-2,
 #page1 .logo-gif {
   position: absolute;
   top: 0;
   left: 0;
+}
+
+#page1 .deco-gif-1 {
   z-index: 1;
 }
 
-#page1 .deco-gif {
-  position: relative;
+#page1 .deco-gif-2 {
   z-index: 2;
+}
+
+#page1 .logo-gif {
+  z-index: 3;
 }
 
 /* ---------- Page 3 Style ---------- */
